   is established or after a short period of inactivity.

MixMonitor
-------------------------
 * A new function, MIXMONITOR, has been added to allow access to individual
   instances of MixMonitor on a channel.

Debugging
-------------------------
 * Core Show Locks output now includes Thread/LWP ID if the platform
   supports this feature.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 12.0.0 to Asterisk 12.1.0 ------------
------------------------------------------------------------------------------

AMI
------------------
 * Added a new module that provides AMI control over MWI within Asterisk,
   res_mwi_external_ami. Note that this module depends on res_mwi_external;
   for more information on enabling this module, see res_mwi_external.
   This module provides the MWIGet/MWIUpdate/MWIDelete actions, as well as
   the MWIGet/MWIGetComplete events.

 * The DialStatus field in the DialEnd event can now contain additional
   statuses that convey how the dial operation terminated. This includes
   ABORT, CONTINUE, and GOTO.

 * AMI will now emit security events. A new class authorization has been
   added in manager.conf for the security events, 'security'. The new events
   are:
    - FailedACL - raised when a request violates an ACL check
    - InvalidAccountID - raised when a request fails an authentication
      check due to an invalid account ID
    - SessionLimit - raised when a request fails due to exceeding the
      number of allowed concurrent sessions for a service
    - MemoryLimit - raised when a request fails due to an internal memory
      allocation failure
    - LoadAverageLimit - raised when a request fails because a configured
      load average limit has been reached
    - RequestNotAllowed - raised when a request is not allowed by
      the service
    - AuthMethodNotAllowed - raised when a request used an authentication
      method not allowed by the service